# refltorch

./: .gitignore  LICENSE  README.md  main.py  make_shoeboxes.py  pyproject.toml
scripts/: mksbox.py  run_dials_phenix.py
scripts/dials_output/: README.md  compare_models.py  out_utils.py  predictive_posterior.py  process_out.py  process_single_refl.py  run_parallel.sh  submit_jobs.py
scripts/dials_phenix/: create_config.py  run_parallel.sh  stats.py  submit_jobs.py
src/refltorch/cli/: mksbox.py
src/refltorch/io/: __init__.py  yaml.py
src/refltorch/plots/: __init__.py  cmaps.py  mpl_config.py
src/refltorch/refl_utils/: __init__.py  refl_utils.py
