[project]
name = "refltorch"
version = "0.1.0"
description = "Utilities to work with .refl files and PyTorch"
readme = "README.md"
authors = [
    { name = "Luis Aldama", email = "luis_aldama@g.harvard.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "cbf",
    "ipython>=9.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "polars>=1.37.0",
    "reciprocalspaceship",
    "seaborn>=0.13.2",
]


[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"


[project.optional-dependencies] 
cu128 = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'", extra = "cu128" },
]
cbf = { git = "https://github.com/paulscherrerinstitute/cbf.git" }
reciprocalspaceship = { git = "https://github.com/LuisA92/reciprocalspaceship" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
